Fix HTML tags to encourage better browser behavior.

--- a/assets/templates/view-tournament.html.tmpl
+++ b/assets/templates/view-tournament.html.tmpl
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html class="clock-page">
+<html lang="en" class="clock-page">
   <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
       Irata Poker Clock: {{ .Tournament.EventName }}
