--- a/assets/templates/edit-footer-plugs.html.tmpl
+++ b/assets/templates/edit-footer-plugs.html.tmpl
@@ -1,6 +1,8 @@
 <!-- edit footer plugs -->
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>
             Irata Poker Clock: Edit Footer Plugs {{ .FooterPlugsID }}
         </title>
