--- a/assets/templates/edit-structure.html.tmpl
+++ b/assets/templates/edit-structure.html.tmpl
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>{{ if .IsNew }}Create{{ else }}Edit{{ end }} Structure</title>
     <link rel="stylesheet" href="/fs/irata-style.css">
 </head>
