--- a/assets/templates/edit-tournament.html.tmpl
+++ b/assets/templates/edit-tournament.html.tmpl
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>{{ if .IsNew }}Create{{ else }}Edit{{ end }} Tournament</title>
     <link rel="stylesheet" href="/fs/{{ .SiteConfig.Theme }}-style.css">
 </head>
