--- a/assets/templates/slash.html.tmpl
+++ b/assets/templates/slash.html.tmpl
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>{{ .SiteConfig.Name }}</title>
     <link rel="stylesheet" href="/fs/{{- .SiteConfig.Theme -}}-style.css">
 </head>
