--- a/assets/templates/view-tournament.html.tmpl
+++ b/assets/templates/view-tournament.html.tmpl
@@ -103,12 +103,11 @@
 
     <div id="help-dialog" class="clock-help-dialog-overlay">
       <div class="clock-help-dialog-content">
-        <h3>Keyboard Control</h3>
         <table style="width:100%; border-collapse:collapse; margin:0; font-size:1.3vi;">
           <tbody>
             <tr>
               <td class="clock-help-dialog-table-key"><b>Space</b></td>
-              <td class="clock-help-dialog-table-desc">Pause/Resume Clock (or [Enter])</td>
+              <td class="clock-help-dialog-table-desc">Pause/Resume (or [Enter])</td>
             </tr>
             <tr>
               <td class="clock-help-dialog-table-key"><b>PgUp</b></td>
@@ -116,15 +115,23 @@
             </tr>
             <tr>
               <td class="clock-help-dialog-table-key"><b>PgDn</b></td>
-              <td class="clock-help-dialog-table-desc">†Remove Player †</td>
+              <td class="clock-help-dialog-table-desc">Remove Player †</td>
             </tr>
             <tr>
               <td class="clock-help-dialog-table-key"><b>Home</b></td>
-              <td class="clock-help-dialog-table-desc">Add Buy-In (or [=] or [.]) †</td>
+              <td class="clock-help-dialog-table-desc">Add Buyin †</td>
             </tr>
             <tr>
               <td class="clock-help-dialog-table-key"><b>End</b></td>
-              <td class="clock-help-dialog-table-desc">Remove Buy-In (or [-] or [,]) †</td>
+              <td class="clock-help-dialog-table-desc">Remove Buyin †</td>
+            </tr>
+            <tr>
+              <td class="clock-help-dialog-table-key"><b>Insert</b></td>
+              <td class="clock-help-dialog-table-desc">Add Add-On †</td>
+            </tr>
+            <tr>
+              <td class="clock-help-dialog-table-key"><b>Delete</b></td>
+              <td class="clock-help-dialog-table-desc">Remove Add-On †</td>
             </tr>
             <tr> <td colspan="2"> <hr> </td> </tr>
             <tr>
@@ -159,9 +166,9 @@
           </tbody>
         </table>
         <div class="clock-help-dialog-close">
-          † If holding shift, these step by 10. </br>
-          * These are disabled unless clock is paused and unlocked. <br>
-          <b>F1</b>, <b>?</b>, or <b>/</b> will show this message. <br>
+          † Shift+key will step by 10 </br>
+          * Lock/unlock with BS key. <br>
+          <b>F1</b> or <b>?</b> shows help. <br>
           <b>Esc</b> to close this help.
         </div>
       </div>
